// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Transaction /> should render contract creation events correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Transaction
    amount="0.000000000000000001"
    confirmations="204"
    counterpartyAddress=""
    defaultOpen={false}
    fiatEquivilent="$123.34 USD"
    intl={
        Object {
            "formatMessage": [Function],
          }
    }
    onChange={[Function]}
    symbol="UKG"
    time={1995-01-09T04:19:09.000Z}
    type="sent"
    viewOnBlockExplorerClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Transaction.style__DetailCollapse
        bordered={false}
        defaultActiveKey={null}
        onChange={[Function]}
>
        <Transaction.style__DetailPanel
                header={
                        <Transaction.style__HeaderWrapper>
                                <Transaction.style__Image
                                        src="/public/images/assets/UKG.svg"
                                />
                                <Transaction.style__TypeIcon
                                        type="upload"
                                />
                                <Transaction.style__TypeText>
                                        sent
                                </Transaction.style__TypeText>
                                <Transaction.style__Amount>
                                        0.000000000000000001
                                         
                                        UKG
                                </Transaction.style__Amount>
                                <Transaction.style__FiatValue>
                                        ($123.34 USD)
                                </Transaction.style__FiatValue>
                                <Transaction.style__TransactionHistoryTime>
                                        01/09/1995
                                </Transaction.style__TransactionHistoryTime>
                        </Transaction.style__HeaderWrapper>
                }
                showArrow={false}
        >
                <Transaction.style__CollapsableContent>
                        <div
                                style={
                                        Object {
                                                "display": "flex",
                                              }
                                }
                        >
                                <Transaction.style__SubtitleText>
                                        contract_creation
                                </Transaction.style__SubtitleText>
                                <Transaction.style__GreenTextWrapper />
                        </div>
                        <div
                                style={
                                        Object {
                                                "display": "flex",
                                              }
                                }
                        >
                                <Transaction.style__SubtitleText>
                                        confirmations
                                        :
                                </Transaction.style__SubtitleText>
                                <Transaction.style__GreenTextWrapper>
                                        204
                                </Transaction.style__GreenTextWrapper>
                        </div>
                        <Transaction.style__TransactionId
                                onClick={[Function]}
                        >
                                view_etherscan
                        </Transaction.style__TransactionId>
                </Transaction.style__CollapsableContent>
        </Transaction.style__DetailPanel>
</Transaction.style__DetailCollapse>,
      "className": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bordered": false,
        "children": <Transaction.style__DetailPanel
          header={
                    <Transaction.style__HeaderWrapper>
                              <Transaction.style__Image
                                        src="/public/images/assets/UKG.svg"
                              />
                              <Transaction.style__TypeIcon
                                        type="upload"
                              />
                              <Transaction.style__TypeText>
                                        sent
                              </Transaction.style__TypeText>
                              <Transaction.style__Amount>
                                        0.000000000000000001
                                         
                                        UKG
                              </Transaction.style__Amount>
                              <Transaction.style__FiatValue>
                                        ($123.34 USD)
                              </Transaction.style__FiatValue>
                              <Transaction.style__TransactionHistoryTime>
                                        01/09/1995
                              </Transaction.style__TransactionHistoryTime>
                    </Transaction.style__HeaderWrapper>
          }
          showArrow={false}
>
          <Transaction.style__CollapsableContent>
                    <div
                              style={
                                        Object {
                                                  "display": "flex",
                                                }
                              }
                    >
                              <Transaction.style__SubtitleText>
                                        contract_creation
                              </Transaction.style__SubtitleText>
                              <Transaction.style__GreenTextWrapper />
                    </div>
                    <div
                              style={
                                        Object {
                                                  "display": "flex",
                                                }
                              }
                    >
                              <Transaction.style__SubtitleText>
                                        confirmations
                                        :
                              </Transaction.style__SubtitleText>
                              <Transaction.style__GreenTextWrapper>
                                        204
                              </Transaction.style__GreenTextWrapper>
                    </div>
                    <Transaction.style__TransactionId
                              onClick={[Function]}
                    >
                              view_etherscan
                    </Transaction.style__TransactionId>
          </Transaction.style__CollapsableContent>
</Transaction.style__DetailPanel>,
        "defaultActiveKey": null,
        "onChange": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "children": <Transaction.style__CollapsableContent>
            <div
                        style={
                                    Object {
                                                "display": "flex",
                                              }
                        }
            >
                        <Transaction.style__SubtitleText>
                                    contract_creation
                        </Transaction.style__SubtitleText>
                        <Transaction.style__GreenTextWrapper />
            </div>
            <div
                        style={
                                    Object {
                                                "display": "flex",
                                              }
                        }
            >
                        <Transaction.style__SubtitleText>
                                    confirmations
                                    :
                        </Transaction.style__SubtitleText>
                        <Transaction.style__GreenTextWrapper>
                                    204
                        </Transaction.style__GreenTextWrapper>
            </div>
            <Transaction.style__TransactionId
                        onClick={[Function]}
            >
                        view_etherscan
            </Transaction.style__TransactionId>
</Transaction.style__CollapsableContent>,
          "header": <Transaction.style__HeaderWrapper>
            <Transaction.style__Image
                        src="/public/images/assets/UKG.svg"
            />
            <Transaction.style__TypeIcon
                        type="upload"
            />
            <Transaction.style__TypeText>
                        sent
            </Transaction.style__TypeText>
            <Transaction.style__Amount>
                        0.000000000000000001
                         
                        UKG
            </Transaction.style__Amount>
            <Transaction.style__FiatValue>
                        ($123.34 USD)
            </Transaction.style__FiatValue>
            <Transaction.style__TransactionHistoryTime>
                        01/09/1995
            </Transaction.style__TransactionHistoryTime>
</Transaction.style__HeaderWrapper>,
          "showArrow": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div
                style={
                                Object {
                                                "display": "flex",
                                              }
                }
>
                <Transaction.style__SubtitleText>
                                contract_creation
                </Transaction.style__SubtitleText>
                <Transaction.style__GreenTextWrapper />
</div>,
              <div
                style={
                                Object {
                                                "display": "flex",
                                              }
                }
>
                <Transaction.style__SubtitleText>
                                confirmations
                                :
                </Transaction.style__SubtitleText>
                <Transaction.style__GreenTextWrapper>
                                204
                </Transaction.style__GreenTextWrapper>
</div>,
              <Transaction.style__TransactionId
                onClick={[Function]}
>
                view_etherscan
</Transaction.style__TransactionId>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Transaction.style__SubtitleText>
                    contract_creation
</Transaction.style__SubtitleText>,
                  <Transaction.style__GreenTextWrapper />,
                ],
                "style": Object {
                  "display": "flex",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "contract_creation",
                      false,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "contract_creation",
                    false,
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Transaction.style__SubtitleText>
                    confirmations
                    :
</Transaction.style__SubtitleText>,
                  <Transaction.style__GreenTextWrapper>
                    204
</Transaction.style__GreenTextWrapper>,
                ],
                "style": Object {
                  "display": "flex",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "confirmations",
                      ":",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "confirmations",
                    ":",
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "204",
                  },
                  "ref": null,
                  "rendered": "204",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "view_etherscan",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "view_etherscan",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Transaction.style__DetailCollapse
          bordered={false}
          defaultActiveKey={null}
          onChange={[Function]}
>
          <Transaction.style__DetailPanel
                    header={
                              <Transaction.style__HeaderWrapper>
                                        <Transaction.style__Image
                                                  src="/public/images/assets/UKG.svg"
                                        />
                                        <Transaction.style__TypeIcon
                                                  type="upload"
                                        />
                                        <Transaction.style__TypeText>
                                                  sent
                                        </Transaction.style__TypeText>
                                        <Transaction.style__Amount>
                                                  0.000000000000000001
                                                   
                                                  UKG
                                        </Transaction.style__Amount>
                                        <Transaction.style__FiatValue>
                                                  ($123.34 USD)
                                        </Transaction.style__FiatValue>
                                        <Transaction.style__TransactionHistoryTime>
                                                  01/09/1995
                                        </Transaction.style__TransactionHistoryTime>
                              </Transaction.style__HeaderWrapper>
                    }
                    showArrow={false}
          >
                    <Transaction.style__CollapsableContent>
                              <div
                                        style={
                                                  Object {
                                                            "display": "flex",
                                                          }
                                        }
                              >
                                        <Transaction.style__SubtitleText>
                                                  contract_creation
                                        </Transaction.style__SubtitleText>
                                        <Transaction.style__GreenTextWrapper />
                              </div>
                              <div
                                        style={
                                                  Object {
                                                            "display": "flex",
                                                          }
                                        }
                              >
                                        <Transaction.style__SubtitleText>
                                                  confirmations
                                                  :
                                        </Transaction.style__SubtitleText>
                                        <Transaction.style__GreenTextWrapper>
                                                  204
                                        </Transaction.style__GreenTextWrapper>
                              </div>
                              <Transaction.style__TransactionId
                                        onClick={[Function]}
                              >
                                        view_etherscan
                              </Transaction.style__TransactionId>
                    </Transaction.style__CollapsableContent>
          </Transaction.style__DetailPanel>
</Transaction.style__DetailCollapse>,
        "className": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bordered": false,
          "children": <Transaction.style__DetailPanel
            header={
                        <Transaction.style__HeaderWrapper>
                                    <Transaction.style__Image
                                                src="/public/images/assets/UKG.svg"
                                    />
                                    <Transaction.style__TypeIcon
                                                type="upload"
                                    />
                                    <Transaction.style__TypeText>
                                                sent
                                    </Transaction.style__TypeText>
                                    <Transaction.style__Amount>
                                                0.000000000000000001
                                                 
                                                UKG
                                    </Transaction.style__Amount>
                                    <Transaction.style__FiatValue>
                                                ($123.34 USD)
                                    </Transaction.style__FiatValue>
                                    <Transaction.style__TransactionHistoryTime>
                                                01/09/1995
                                    </Transaction.style__TransactionHistoryTime>
                        </Transaction.style__HeaderWrapper>
            }
            showArrow={false}
>
            <Transaction.style__CollapsableContent>
                        <div
                                    style={
                                                Object {
                                                            "display": "flex",
                                                          }
                                    }
                        >
                                    <Transaction.style__SubtitleText>
                                                contract_creation
                                    </Transaction.style__SubtitleText>
                                    <Transaction.style__GreenTextWrapper />
                        </div>
                        <div
                                    style={
                                                Object {
                                                            "display": "flex",
                                                          }
                                    }
                        >
                                    <Transaction.style__SubtitleText>
                                                confirmations
                                                :
                                    </Transaction.style__SubtitleText>
                                    <Transaction.style__GreenTextWrapper>
                                                204
                                    </Transaction.style__GreenTextWrapper>
                        </div>
                        <Transaction.style__TransactionId
                                    onClick={[Function]}
                        >
                                    view_etherscan
                        </Transaction.style__TransactionId>
            </Transaction.style__CollapsableContent>
</Transaction.style__DetailPanel>,
          "defaultActiveKey": null,
          "onChange": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "children": <Transaction.style__CollapsableContent>
              <div
                            style={
                                          Object {
                                                        "display": "flex",
                                                      }
                            }
              >
                            <Transaction.style__SubtitleText>
                                          contract_creation
                            </Transaction.style__SubtitleText>
                            <Transaction.style__GreenTextWrapper />
              </div>
              <div
                            style={
                                          Object {
                                                        "display": "flex",
                                                      }
                            }
              >
                            <Transaction.style__SubtitleText>
                                          confirmations
                                          :
                            </Transaction.style__SubtitleText>
                            <Transaction.style__GreenTextWrapper>
                                          204
                            </Transaction.style__GreenTextWrapper>
              </div>
              <Transaction.style__TransactionId
                            onClick={[Function]}
              >
                            view_etherscan
              </Transaction.style__TransactionId>
</Transaction.style__CollapsableContent>,
            "header": <Transaction.style__HeaderWrapper>
              <Transaction.style__Image
                            src="/public/images/assets/UKG.svg"
              />
              <Transaction.style__TypeIcon
                            type="upload"
              />
              <Transaction.style__TypeText>
                            sent
              </Transaction.style__TypeText>
              <Transaction.style__Amount>
                            0.000000000000000001
                             
                            UKG
              </Transaction.style__Amount>
              <Transaction.style__FiatValue>
                            ($123.34 USD)
              </Transaction.style__FiatValue>
              <Transaction.style__TransactionHistoryTime>
                            01/09/1995
              </Transaction.style__TransactionHistoryTime>
</Transaction.style__HeaderWrapper>,
            "showArrow": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <div
                  style={
                                    Object {
                                                      "display": "flex",
                                                    }
                  }
>
                  <Transaction.style__SubtitleText>
                                    contract_creation
                  </Transaction.style__SubtitleText>
                  <Transaction.style__GreenTextWrapper />
</div>,
                <div
                  style={
                                    Object {
                                                      "display": "flex",
                                                    }
                  }
>
                  <Transaction.style__SubtitleText>
                                    confirmations
                                    :
                  </Transaction.style__SubtitleText>
                  <Transaction.style__GreenTextWrapper>
                                    204
                  </Transaction.style__GreenTextWrapper>
</div>,
                <Transaction.style__TransactionId
                  onClick={[Function]}
>
                  view_etherscan
</Transaction.style__TransactionId>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Transaction.style__SubtitleText>
                      contract_creation
</Transaction.style__SubtitleText>,
                    <Transaction.style__GreenTextWrapper />,
                  ],
                  "style": Object {
                    "display": "flex",
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": Array [
                        "contract_creation",
                        false,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "contract_creation",
                      false,
                    ],
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "",
                    },
                    "ref": null,
                    "rendered": "",
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Transaction.style__SubtitleText>
                      confirmations
                      :
</Transaction.style__SubtitleText>,
                    <Transaction.style__GreenTextWrapper>
                      204
</Transaction.style__GreenTextWrapper>,
                  ],
                  "style": Object {
                    "display": "flex",
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": Array [
                        "confirmations",
                        ":",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "confirmations",
                      ":",
                    ],
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "204",
                    },
                    "ref": null,
                    "rendered": "204",
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "view_etherscan",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "view_etherscan",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Transaction /> should render correctly tx type recieved 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Transaction
    amount="0.000000000000000001"
    confirmations="204"
    counterpartyAddress="0x00"
    defaultOpen={false}
    fiatEquivilent="$123.34 USD"
    intl={
        Object {
            "formatMessage": [Function],
          }
    }
    onChange={[Function]}
    symbol="UKG"
    time={1995-01-09T04:19:09.000Z}
    type="recieved"
    viewOnBlockExplorerClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Transaction.style__DetailCollapse
        bordered={false}
        defaultActiveKey={null}
        onChange={[Function]}
>
        <Transaction.style__DetailPanel
                header={
                        <Transaction.style__HeaderWrapper>
                                <Transaction.style__Image
                                        src="/public/images/assets/UKG.svg"
                                />
                                <Transaction.style__TypeIcon
                                        type="upload"
                                />
                                <Transaction.style__TypeText>
                                        sent
                                </Transaction.style__TypeText>
                                <Transaction.style__Amount>
                                        0.000000000000000001
                                         
                                        UKG
                                </Transaction.style__Amount>
                                <Transaction.style__FiatValue>
                                        ($123.34 USD)
                                </Transaction.style__FiatValue>
                                <Transaction.style__TransactionHistoryTime>
                                        01/09/1995
                                </Transaction.style__TransactionHistoryTime>
                        </Transaction.style__HeaderWrapper>
                }
                showArrow={false}
        >
                <Transaction.style__CollapsableContent>
                        <div
                                style={
                                        Object {
                                                "display": "flex",
                                              }
                                }
                        >
                                <Transaction.style__SubtitleText>
                                        to:
                                </Transaction.style__SubtitleText>
                                <Transaction.style__GreenTextWrapper>
                                        0x00
                                </Transaction.style__GreenTextWrapper>
                        </div>
                        <div
                                style={
                                        Object {
                                                "display": "flex",
                                              }
                                }
                        >
                                <Transaction.style__SubtitleText>
                                        confirmations
                                        :
                                </Transaction.style__SubtitleText>
                                <Transaction.style__GreenTextWrapper>
                                        204
                                </Transaction.style__GreenTextWrapper>
                        </div>
                        <Transaction.style__TransactionId
                                onClick={[Function]}
                        >
                                view_etherscan
                        </Transaction.style__TransactionId>
                </Transaction.style__CollapsableContent>
        </Transaction.style__DetailPanel>
</Transaction.style__DetailCollapse>,
      "className": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bordered": false,
        "children": <Transaction.style__DetailPanel
          header={
                    <Transaction.style__HeaderWrapper>
                              <Transaction.style__Image
                                        src="/public/images/assets/UKG.svg"
                              />
                              <Transaction.style__TypeIcon
                                        type="upload"
                              />
                              <Transaction.style__TypeText>
                                        sent
                              </Transaction.style__TypeText>
                              <Transaction.style__Amount>
                                        0.000000000000000001
                                         
                                        UKG
                              </Transaction.style__Amount>
                              <Transaction.style__FiatValue>
                                        ($123.34 USD)
                              </Transaction.style__FiatValue>
                              <Transaction.style__TransactionHistoryTime>
                                        01/09/1995
                              </Transaction.style__TransactionHistoryTime>
                    </Transaction.style__HeaderWrapper>
          }
          showArrow={false}
>
          <Transaction.style__CollapsableContent>
                    <div
                              style={
                                        Object {
                                                  "display": "flex",
                                                }
                              }
                    >
                              <Transaction.style__SubtitleText>
                                        to:
                              </Transaction.style__SubtitleText>
                              <Transaction.style__GreenTextWrapper>
                                        0x00
                              </Transaction.style__GreenTextWrapper>
                    </div>
                    <div
                              style={
                                        Object {
                                                  "display": "flex",
                                                }
                              }
                    >
                              <Transaction.style__SubtitleText>
                                        confirmations
                                        :
                              </Transaction.style__SubtitleText>
                              <Transaction.style__GreenTextWrapper>
                                        204
                              </Transaction.style__GreenTextWrapper>
                    </div>
                    <Transaction.style__TransactionId
                              onClick={[Function]}
                    >
                              view_etherscan
                    </Transaction.style__TransactionId>
          </Transaction.style__CollapsableContent>
</Transaction.style__DetailPanel>,
        "defaultActiveKey": null,
        "onChange": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "children": <Transaction.style__CollapsableContent>
            <div
                        style={
                                    Object {
                                                "display": "flex",
                                              }
                        }
            >
                        <Transaction.style__SubtitleText>
                                    to:
                        </Transaction.style__SubtitleText>
                        <Transaction.style__GreenTextWrapper>
                                    0x00
                        </Transaction.style__GreenTextWrapper>
            </div>
            <div
                        style={
                                    Object {
                                                "display": "flex",
                                              }
                        }
            >
                        <Transaction.style__SubtitleText>
                                    confirmations
                                    :
                        </Transaction.style__SubtitleText>
                        <Transaction.style__GreenTextWrapper>
                                    204
                        </Transaction.style__GreenTextWrapper>
            </div>
            <Transaction.style__TransactionId
                        onClick={[Function]}
            >
                        view_etherscan
            </Transaction.style__TransactionId>
</Transaction.style__CollapsableContent>,
          "header": <Transaction.style__HeaderWrapper>
            <Transaction.style__Image
                        src="/public/images/assets/UKG.svg"
            />
            <Transaction.style__TypeIcon
                        type="upload"
            />
            <Transaction.style__TypeText>
                        sent
            </Transaction.style__TypeText>
            <Transaction.style__Amount>
                        0.000000000000000001
                         
                        UKG
            </Transaction.style__Amount>
            <Transaction.style__FiatValue>
                        ($123.34 USD)
            </Transaction.style__FiatValue>
            <Transaction.style__TransactionHistoryTime>
                        01/09/1995
            </Transaction.style__TransactionHistoryTime>
</Transaction.style__HeaderWrapper>,
          "showArrow": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div
                style={
                                Object {
                                                "display": "flex",
                                              }
                }
>
                <Transaction.style__SubtitleText>
                                to:
                </Transaction.style__SubtitleText>
                <Transaction.style__GreenTextWrapper>
                                0x00
                </Transaction.style__GreenTextWrapper>
</div>,
              <div
                style={
                                Object {
                                                "display": "flex",
                                              }
                }
>
                <Transaction.style__SubtitleText>
                                confirmations
                                :
                </Transaction.style__SubtitleText>
                <Transaction.style__GreenTextWrapper>
                                204
                </Transaction.style__GreenTextWrapper>
</div>,
              <Transaction.style__TransactionId
                onClick={[Function]}
>
                view_etherscan
</Transaction.style__TransactionId>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Transaction.style__SubtitleText>
                    to:
</Transaction.style__SubtitleText>,
                  <Transaction.style__GreenTextWrapper>
                    0x00
</Transaction.style__GreenTextWrapper>,
                ],
                "style": Object {
                  "display": "flex",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      false,
                      "to:",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    false,
                    "to:",
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "0x00",
                  },
                  "ref": null,
                  "rendered": "0x00",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Transaction.style__SubtitleText>
                    confirmations
                    :
</Transaction.style__SubtitleText>,
                  <Transaction.style__GreenTextWrapper>
                    204
</Transaction.style__GreenTextWrapper>,
                ],
                "style": Object {
                  "display": "flex",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "confirmations",
                      ":",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "confirmations",
                    ":",
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "204",
                  },
                  "ref": null,
                  "rendered": "204",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "view_etherscan",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "view_etherscan",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Transaction.style__DetailCollapse
          bordered={false}
          defaultActiveKey={null}
          onChange={[Function]}
>
          <Transaction.style__DetailPanel
                    header={
                              <Transaction.style__HeaderWrapper>
                                        <Transaction.style__Image
                                                  src="/public/images/assets/UKG.svg"
                                        />
                                        <Transaction.style__TypeIcon
                                                  type="upload"
                                        />
                                        <Transaction.style__TypeText>
                                                  sent
                                        </Transaction.style__TypeText>
                                        <Transaction.style__Amount>
                                                  0.000000000000000001
                                                   
                                                  UKG
                                        </Transaction.style__Amount>
                                        <Transaction.style__FiatValue>
                                                  ($123.34 USD)
                                        </Transaction.style__FiatValue>
                                        <Transaction.style__TransactionHistoryTime>
                                                  01/09/1995
                                        </Transaction.style__TransactionHistoryTime>
                              </Transaction.style__HeaderWrapper>
                    }
                    showArrow={false}
          >
                    <Transaction.style__CollapsableContent>
                              <div
                                        style={
                                                  Object {
                                                            "display": "flex",
                                                          }
                                        }
                              >
                                        <Transaction.style__SubtitleText>
                                                  to:
                                        </Transaction.style__SubtitleText>
                                        <Transaction.style__GreenTextWrapper>
                                                  0x00
                                        </Transaction.style__GreenTextWrapper>
                              </div>
                              <div
                                        style={
                                                  Object {
                                                            "display": "flex",
                                                          }
                                        }
                              >
                                        <Transaction.style__SubtitleText>
                                                  confirmations
                                                  :
                                        </Transaction.style__SubtitleText>
                                        <Transaction.style__GreenTextWrapper>
                                                  204
                                        </Transaction.style__GreenTextWrapper>
                              </div>
                              <Transaction.style__TransactionId
                                        onClick={[Function]}
                              >
                                        view_etherscan
                              </Transaction.style__TransactionId>
                    </Transaction.style__CollapsableContent>
          </Transaction.style__DetailPanel>
</Transaction.style__DetailCollapse>,
        "className": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bordered": false,
          "children": <Transaction.style__DetailPanel
            header={
                        <Transaction.style__HeaderWrapper>
                                    <Transaction.style__Image
                                                src="/public/images/assets/UKG.svg"
                                    />
                                    <Transaction.style__TypeIcon
                                                type="upload"
                                    />
                                    <Transaction.style__TypeText>
                                                sent
                                    </Transaction.style__TypeText>
                                    <Transaction.style__Amount>
                                                0.000000000000000001
                                                 
                                                UKG
                                    </Transaction.style__Amount>
                                    <Transaction.style__FiatValue>
                                                ($123.34 USD)
                                    </Transaction.style__FiatValue>
                                    <Transaction.style__TransactionHistoryTime>
                                                01/09/1995
                                    </Transaction.style__TransactionHistoryTime>
                        </Transaction.style__HeaderWrapper>
            }
            showArrow={false}
>
            <Transaction.style__CollapsableContent>
                        <div
                                    style={
                                                Object {
                                                            "display": "flex",
                                                          }
                                    }
                        >
                                    <Transaction.style__SubtitleText>
                                                to:
                                    </Transaction.style__SubtitleText>
                                    <Transaction.style__GreenTextWrapper>
                                                0x00
                                    </Transaction.style__GreenTextWrapper>
                        </div>
                        <div
                                    style={
                                                Object {
                                                            "display": "flex",
                                                          }
                                    }
                        >
                                    <Transaction.style__SubtitleText>
                                                confirmations
                                                :
                                    </Transaction.style__SubtitleText>
                                    <Transaction.style__GreenTextWrapper>
                                                204
                                    </Transaction.style__GreenTextWrapper>
                        </div>
                        <Transaction.style__TransactionId
                                    onClick={[Function]}
                        >
                                    view_etherscan
                        </Transaction.style__TransactionId>
            </Transaction.style__CollapsableContent>
</Transaction.style__DetailPanel>,
          "defaultActiveKey": null,
          "onChange": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "children": <Transaction.style__CollapsableContent>
              <div
                            style={
                                          Object {
                                                        "display": "flex",
                                                      }
                            }
              >
                            <Transaction.style__SubtitleText>
                                          to:
                            </Transaction.style__SubtitleText>
                            <Transaction.style__GreenTextWrapper>
                                          0x00
                            </Transaction.style__GreenTextWrapper>
              </div>
              <div
                            style={
                                          Object {
                                                        "display": "flex",
                                                      }
                            }
              >
                            <Transaction.style__SubtitleText>
                                          confirmations
                                          :
                            </Transaction.style__SubtitleText>
                            <Transaction.style__GreenTextWrapper>
                                          204
                            </Transaction.style__GreenTextWrapper>
              </div>
              <Transaction.style__TransactionId
                            onClick={[Function]}
              >
                            view_etherscan
              </Transaction.style__TransactionId>
</Transaction.style__CollapsableContent>,
            "header": <Transaction.style__HeaderWrapper>
              <Transaction.style__Image
                            src="/public/images/assets/UKG.svg"
              />
              <Transaction.style__TypeIcon
                            type="upload"
              />
              <Transaction.style__TypeText>
                            sent
              </Transaction.style__TypeText>
              <Transaction.style__Amount>
                            0.000000000000000001
                             
                            UKG
              </Transaction.style__Amount>
              <Transaction.style__FiatValue>
                            ($123.34 USD)
              </Transaction.style__FiatValue>
              <Transaction.style__TransactionHistoryTime>
                            01/09/1995
              </Transaction.style__TransactionHistoryTime>
</Transaction.style__HeaderWrapper>,
            "showArrow": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <div
                  style={
                                    Object {
                                                      "display": "flex",
                                                    }
                  }
>
                  <Transaction.style__SubtitleText>
                                    to:
                  </Transaction.style__SubtitleText>
                  <Transaction.style__GreenTextWrapper>
                                    0x00
                  </Transaction.style__GreenTextWrapper>
</div>,
                <div
                  style={
                                    Object {
                                                      "display": "flex",
                                                    }
                  }
>
                  <Transaction.style__SubtitleText>
                                    confirmations
                                    :
                  </Transaction.style__SubtitleText>
                  <Transaction.style__GreenTextWrapper>
                                    204
                  </Transaction.style__GreenTextWrapper>
</div>,
                <Transaction.style__TransactionId
                  onClick={[Function]}
>
                  view_etherscan
</Transaction.style__TransactionId>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Transaction.style__SubtitleText>
                      to:
</Transaction.style__SubtitleText>,
                    <Transaction.style__GreenTextWrapper>
                      0x00
</Transaction.style__GreenTextWrapper>,
                  ],
                  "style": Object {
                    "display": "flex",
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": Array [
                        false,
                        "to:",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      false,
                      "to:",
                    ],
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "0x00",
                    },
                    "ref": null,
                    "rendered": "0x00",
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Transaction.style__SubtitleText>
                      confirmations
                      :
</Transaction.style__SubtitleText>,
                    <Transaction.style__GreenTextWrapper>
                      204
</Transaction.style__GreenTextWrapper>,
                  ],
                  "style": Object {
                    "display": "flex",
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": Array [
                        "confirmations",
                        ":",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "confirmations",
                      ":",
                    ],
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "204",
                    },
                    "ref": null,
                    "rendered": "204",
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "view_etherscan",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "view_etherscan",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Transaction /> should render correctly tx type sent 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Transaction
    amount="0.000000000000000001"
    confirmations="204"
    counterpartyAddress="0x00"
    defaultOpen={false}
    fiatEquivilent="$123.34 USD"
    intl={
        Object {
            "formatMessage": [Function],
          }
    }
    onChange={[Function]}
    symbol="UKG"
    time={1995-01-09T04:19:09.000Z}
    type="sent"
    viewOnBlockExplorerClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Transaction.style__DetailCollapse
        bordered={false}
        defaultActiveKey={null}
        onChange={[Function]}
>
        <Transaction.style__DetailPanel
                header={
                        <Transaction.style__HeaderWrapper>
                                <Transaction.style__Image
                                        src="/public/images/assets/UKG.svg"
                                />
                                <Transaction.style__TypeIcon
                                        type="upload"
                                />
                                <Transaction.style__TypeText>
                                        sent
                                </Transaction.style__TypeText>
                                <Transaction.style__Amount>
                                        0.000000000000000001
                                         
                                        UKG
                                </Transaction.style__Amount>
                                <Transaction.style__FiatValue>
                                        ($123.34 USD)
                                </Transaction.style__FiatValue>
                                <Transaction.style__TransactionHistoryTime>
                                        01/09/1995
                                </Transaction.style__TransactionHistoryTime>
                        </Transaction.style__HeaderWrapper>
                }
                showArrow={false}
        >
                <Transaction.style__CollapsableContent>
                        <div
                                style={
                                        Object {
                                                "display": "flex",
                                              }
                                }
                        >
                                <Transaction.style__SubtitleText>
                                        to:
                                </Transaction.style__SubtitleText>
                                <Transaction.style__GreenTextWrapper>
                                        0x00
                                </Transaction.style__GreenTextWrapper>
                        </div>
                        <div
                                style={
                                        Object {
                                                "display": "flex",
                                              }
                                }
                        >
                                <Transaction.style__SubtitleText>
                                        confirmations
                                        :
                                </Transaction.style__SubtitleText>
                                <Transaction.style__GreenTextWrapper>
                                        204
                                </Transaction.style__GreenTextWrapper>
                        </div>
                        <Transaction.style__TransactionId
                                onClick={[Function]}
                        >
                                view_etherscan
                        </Transaction.style__TransactionId>
                </Transaction.style__CollapsableContent>
        </Transaction.style__DetailPanel>
</Transaction.style__DetailCollapse>,
      "className": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bordered": false,
        "children": <Transaction.style__DetailPanel
          header={
                    <Transaction.style__HeaderWrapper>
                              <Transaction.style__Image
                                        src="/public/images/assets/UKG.svg"
                              />
                              <Transaction.style__TypeIcon
                                        type="upload"
                              />
                              <Transaction.style__TypeText>
                                        sent
                              </Transaction.style__TypeText>
                              <Transaction.style__Amount>
                                        0.000000000000000001
                                         
                                        UKG
                              </Transaction.style__Amount>
                              <Transaction.style__FiatValue>
                                        ($123.34 USD)
                              </Transaction.style__FiatValue>
                              <Transaction.style__TransactionHistoryTime>
                                        01/09/1995
                              </Transaction.style__TransactionHistoryTime>
                    </Transaction.style__HeaderWrapper>
          }
          showArrow={false}
>
          <Transaction.style__CollapsableContent>
                    <div
                              style={
                                        Object {
                                                  "display": "flex",
                                                }
                              }
                    >
                              <Transaction.style__SubtitleText>
                                        to:
                              </Transaction.style__SubtitleText>
                              <Transaction.style__GreenTextWrapper>
                                        0x00
                              </Transaction.style__GreenTextWrapper>
                    </div>
                    <div
                              style={
                                        Object {
                                                  "display": "flex",
                                                }
                              }
                    >
                              <Transaction.style__SubtitleText>
                                        confirmations
                                        :
                              </Transaction.style__SubtitleText>
                              <Transaction.style__GreenTextWrapper>
                                        204
                              </Transaction.style__GreenTextWrapper>
                    </div>
                    <Transaction.style__TransactionId
                              onClick={[Function]}
                    >
                              view_etherscan
                    </Transaction.style__TransactionId>
          </Transaction.style__CollapsableContent>
</Transaction.style__DetailPanel>,
        "defaultActiveKey": null,
        "onChange": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "children": <Transaction.style__CollapsableContent>
            <div
                        style={
                                    Object {
                                                "display": "flex",
                                              }
                        }
            >
                        <Transaction.style__SubtitleText>
                                    to:
                        </Transaction.style__SubtitleText>
                        <Transaction.style__GreenTextWrapper>
                                    0x00
                        </Transaction.style__GreenTextWrapper>
            </div>
            <div
                        style={
                                    Object {
                                                "display": "flex",
                                              }
                        }
            >
                        <Transaction.style__SubtitleText>
                                    confirmations
                                    :
                        </Transaction.style__SubtitleText>
                        <Transaction.style__GreenTextWrapper>
                                    204
                        </Transaction.style__GreenTextWrapper>
            </div>
            <Transaction.style__TransactionId
                        onClick={[Function]}
            >
                        view_etherscan
            </Transaction.style__TransactionId>
</Transaction.style__CollapsableContent>,
          "header": <Transaction.style__HeaderWrapper>
            <Transaction.style__Image
                        src="/public/images/assets/UKG.svg"
            />
            <Transaction.style__TypeIcon
                        type="upload"
            />
            <Transaction.style__TypeText>
                        sent
            </Transaction.style__TypeText>
            <Transaction.style__Amount>
                        0.000000000000000001
                         
                        UKG
            </Transaction.style__Amount>
            <Transaction.style__FiatValue>
                        ($123.34 USD)
            </Transaction.style__FiatValue>
            <Transaction.style__TransactionHistoryTime>
                        01/09/1995
            </Transaction.style__TransactionHistoryTime>
</Transaction.style__HeaderWrapper>,
          "showArrow": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div
                style={
                                Object {
                                                "display": "flex",
                                              }
                }
>
                <Transaction.style__SubtitleText>
                                to:
                </Transaction.style__SubtitleText>
                <Transaction.style__GreenTextWrapper>
                                0x00
                </Transaction.style__GreenTextWrapper>
</div>,
              <div
                style={
                                Object {
                                                "display": "flex",
                                              }
                }
>
                <Transaction.style__SubtitleText>
                                confirmations
                                :
                </Transaction.style__SubtitleText>
                <Transaction.style__GreenTextWrapper>
                                204
                </Transaction.style__GreenTextWrapper>
</div>,
              <Transaction.style__TransactionId
                onClick={[Function]}
>
                view_etherscan
</Transaction.style__TransactionId>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Transaction.style__SubtitleText>
                    to:
</Transaction.style__SubtitleText>,
                  <Transaction.style__GreenTextWrapper>
                    0x00
</Transaction.style__GreenTextWrapper>,
                ],
                "style": Object {
                  "display": "flex",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      false,
                      "to:",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    false,
                    "to:",
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "0x00",
                  },
                  "ref": null,
                  "rendered": "0x00",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Transaction.style__SubtitleText>
                    confirmations
                    :
</Transaction.style__SubtitleText>,
                  <Transaction.style__GreenTextWrapper>
                    204
</Transaction.style__GreenTextWrapper>,
                ],
                "style": Object {
                  "display": "flex",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "confirmations",
                      ":",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "confirmations",
                    ":",
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "204",
                  },
                  "ref": null,
                  "rendered": "204",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "view_etherscan",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "view_etherscan",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Transaction.style__DetailCollapse
          bordered={false}
          defaultActiveKey={null}
          onChange={[Function]}
>
          <Transaction.style__DetailPanel
                    header={
                              <Transaction.style__HeaderWrapper>
                                        <Transaction.style__Image
                                                  src="/public/images/assets/UKG.svg"
                                        />
                                        <Transaction.style__TypeIcon
                                                  type="upload"
                                        />
                                        <Transaction.style__TypeText>
                                                  sent
                                        </Transaction.style__TypeText>
                                        <Transaction.style__Amount>
                                                  0.000000000000000001
                                                   
                                                  UKG
                                        </Transaction.style__Amount>
                                        <Transaction.style__FiatValue>
                                                  ($123.34 USD)
                                        </Transaction.style__FiatValue>
                                        <Transaction.style__TransactionHistoryTime>
                                                  01/09/1995
                                        </Transaction.style__TransactionHistoryTime>
                              </Transaction.style__HeaderWrapper>
                    }
                    showArrow={false}
          >
                    <Transaction.style__CollapsableContent>
                              <div
                                        style={
                                                  Object {
                                                            "display": "flex",
                                                          }
                                        }
                              >
                                        <Transaction.style__SubtitleText>
                                                  to:
                                        </Transaction.style__SubtitleText>
                                        <Transaction.style__GreenTextWrapper>
                                                  0x00
                                        </Transaction.style__GreenTextWrapper>
                              </div>
                              <div
                                        style={
                                                  Object {
                                                            "display": "flex",
                                                          }
                                        }
                              >
                                        <Transaction.style__SubtitleText>
                                                  confirmations
                                                  :
                                        </Transaction.style__SubtitleText>
                                        <Transaction.style__GreenTextWrapper>
                                                  204
                                        </Transaction.style__GreenTextWrapper>
                              </div>
                              <Transaction.style__TransactionId
                                        onClick={[Function]}
                              >
                                        view_etherscan
                              </Transaction.style__TransactionId>
                    </Transaction.style__CollapsableContent>
          </Transaction.style__DetailPanel>
</Transaction.style__DetailCollapse>,
        "className": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bordered": false,
          "children": <Transaction.style__DetailPanel
            header={
                        <Transaction.style__HeaderWrapper>
                                    <Transaction.style__Image
                                                src="/public/images/assets/UKG.svg"
                                    />
                                    <Transaction.style__TypeIcon
                                                type="upload"
                                    />
                                    <Transaction.style__TypeText>
                                                sent
                                    </Transaction.style__TypeText>
                                    <Transaction.style__Amount>
                                                0.000000000000000001
                                                 
                                                UKG
                                    </Transaction.style__Amount>
                                    <Transaction.style__FiatValue>
                                                ($123.34 USD)
                                    </Transaction.style__FiatValue>
                                    <Transaction.style__TransactionHistoryTime>
                                                01/09/1995
                                    </Transaction.style__TransactionHistoryTime>
                        </Transaction.style__HeaderWrapper>
            }
            showArrow={false}
>
            <Transaction.style__CollapsableContent>
                        <div
                                    style={
                                                Object {
                                                            "display": "flex",
                                                          }
                                    }
                        >
                                    <Transaction.style__SubtitleText>
                                                to:
                                    </Transaction.style__SubtitleText>
                                    <Transaction.style__GreenTextWrapper>
                                                0x00
                                    </Transaction.style__GreenTextWrapper>
                        </div>
                        <div
                                    style={
                                                Object {
                                                            "display": "flex",
                                                          }
                                    }
                        >
                                    <Transaction.style__SubtitleText>
                                                confirmations
                                                :
                                    </Transaction.style__SubtitleText>
                                    <Transaction.style__GreenTextWrapper>
                                                204
                                    </Transaction.style__GreenTextWrapper>
                        </div>
                        <Transaction.style__TransactionId
                                    onClick={[Function]}
                        >
                                    view_etherscan
                        </Transaction.style__TransactionId>
            </Transaction.style__CollapsableContent>
</Transaction.style__DetailPanel>,
          "defaultActiveKey": null,
          "onChange": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "children": <Transaction.style__CollapsableContent>
              <div
                            style={
                                          Object {
                                                        "display": "flex",
                                                      }
                            }
              >
                            <Transaction.style__SubtitleText>
                                          to:
                            </Transaction.style__SubtitleText>
                            <Transaction.style__GreenTextWrapper>
                                          0x00
                            </Transaction.style__GreenTextWrapper>
              </div>
              <div
                            style={
                                          Object {
                                                        "display": "flex",
                                                      }
                            }
              >
                            <Transaction.style__SubtitleText>
                                          confirmations
                                          :
                            </Transaction.style__SubtitleText>
                            <Transaction.style__GreenTextWrapper>
                                          204
                            </Transaction.style__GreenTextWrapper>
              </div>
              <Transaction.style__TransactionId
                            onClick={[Function]}
              >
                            view_etherscan
              </Transaction.style__TransactionId>
</Transaction.style__CollapsableContent>,
            "header": <Transaction.style__HeaderWrapper>
              <Transaction.style__Image
                            src="/public/images/assets/UKG.svg"
              />
              <Transaction.style__TypeIcon
                            type="upload"
              />
              <Transaction.style__TypeText>
                            sent
              </Transaction.style__TypeText>
              <Transaction.style__Amount>
                            0.000000000000000001
                             
                            UKG
              </Transaction.style__Amount>
              <Transaction.style__FiatValue>
                            ($123.34 USD)
              </Transaction.style__FiatValue>
              <Transaction.style__TransactionHistoryTime>
                            01/09/1995
              </Transaction.style__TransactionHistoryTime>
</Transaction.style__HeaderWrapper>,
            "showArrow": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <div
                  style={
                                    Object {
                                                      "display": "flex",
                                                    }
                  }
>
                  <Transaction.style__SubtitleText>
                                    to:
                  </Transaction.style__SubtitleText>
                  <Transaction.style__GreenTextWrapper>
                                    0x00
                  </Transaction.style__GreenTextWrapper>
</div>,
                <div
                  style={
                                    Object {
                                                      "display": "flex",
                                                    }
                  }
>
                  <Transaction.style__SubtitleText>
                                    confirmations
                                    :
                  </Transaction.style__SubtitleText>
                  <Transaction.style__GreenTextWrapper>
                                    204
                  </Transaction.style__GreenTextWrapper>
</div>,
                <Transaction.style__TransactionId
                  onClick={[Function]}
>
                  view_etherscan
</Transaction.style__TransactionId>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Transaction.style__SubtitleText>
                      to:
</Transaction.style__SubtitleText>,
                    <Transaction.style__GreenTextWrapper>
                      0x00
</Transaction.style__GreenTextWrapper>,
                  ],
                  "style": Object {
                    "display": "flex",
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": Array [
                        false,
                        "to:",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      false,
                      "to:",
                    ],
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "0x00",
                    },
                    "ref": null,
                    "rendered": "0x00",
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Transaction.style__SubtitleText>
                      confirmations
                      :
</Transaction.style__SubtitleText>,
                    <Transaction.style__GreenTextWrapper>
                      204
</Transaction.style__GreenTextWrapper>,
                  ],
                  "style": Object {
                    "display": "flex",
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": Array [
                        "confirmations",
                        ":",
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      "confirmations",
                      ":",
                    ],
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "204",
                    },
                    "ref": null,
                    "rendered": "204",
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "view_etherscan",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "view_etherscan",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
